--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ main {
 
 #makanan, #minuman {
     margin-bottom: 15px;
+    border: 5px black;
 }
 
 @media screen and (min-width: 1280px) {
@@ -48,5 +49,5 @@ main {
 }
 
 .carousel-inner > .carousel-item > img {
-        height: 430px;
-    }
+        height: 456px;
+}
