--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header {
 
 header h1, header h3 {
     margin: 0;
+    padding: 10px;
 }
 
 @media screen and (max-width: 453px) {
@@ -33,7 +34,8 @@ main {
 
 #makanan, #minuman {
     margin-bottom: 15px;
-    border: 5px black;
+    border: 3px black solid;
+    margin: 5px;
 }
 
 @media screen and (min-width: 1280px) {
