order window fixing

--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ main {
     width: 100%;
 }
 
+#identitas {
+    position: relative;
+    bottom: 0;
+}
+
 footer {
     background-color: #4d648d;
     color: wheat;
